# ffmpeg-llm

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ffmpeg-cheatsheet.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/commits/: SKILL.md
agents/: ffmpeg-expert.md
commands/: ffmpeg.md
docs/superpowers/plans/: 2026-05-08-plugin-evaluation.md  2026-05-09-cheatsheet-axes-and-pitfalls.md
docs/superpowers/specs/: 2026-05-08-plugin-evaluation-design.md
evals/: .env.example  .gitignore  README.md  pyproject.toml
evals/fixtures/: README.md  sample_subtitles.srt
evals/prompts/: schema.md  smoke.yaml
evals/runner/: budget.py  claude_invoke.py  extract.py  judge.py  plugin_isolation.py  prompts.py  report.py  run.py  spot_check.py
evals/tests/: test_budget.py  test_claude_invoke.py  test_extract.py  test_plugin_isolation.py  test_prompts.py  test_report.py  test_spot_check.py
skills/ffmpeg-command/: SKILL.md
skills/ffmpeg-command/references/: asset-generation.md  audio.md  encoding.md  filters.md  gpu-acceleration.md  pitfalls.md  seeking-and-trimming.md  streaming.md  text-and-subtitles.md  video-effects.md
